examples/pass/simple_function.uplp
category = "value"

[metadata]
type = "Num"
value = 2.0
---
let f = |x: Num| x + 1 in
f 1