examples/fail/annotated_let_type_mistmatch.uplp
-- category = "error"
--
-- [metadata]
-- error = "Type.mismatch"
--
-- [metadata.expectation]
-- expected = "Unit"
-- got = "Num"
let x: Unit = 105 in x
